--- a/style.css
+++ b/style.css
@@ -6,16 +6,45 @@ body {
 }
 
 section {
+  text-align: center;
   background: #fff;
   color: #272932;
   border-radius: 10px;
   padding: 15px;
-  width: 500px;
-  height: 400px;
+  width: 450px;
+  height: 500px;
   margin: auto;
+  
 }
 
 footer {
   color: #fff;
   font-style: italic;
+}
+
+.primaryBtn{
+  padding: 5px;
+  border-radius: 4px;
+  border: none;
+  margin: 12px;
+}
+.primaryBtn:hover {
+  background: #90EE90;
+  transition: all 0.8s
+}
+
+.inputRadio{
+  margin: 12px;
+}
+.inputField{
+  margin: 12px 4px 12px 4px;
+  height: 24px;
+  width: 56px;
+}
+.photo{
+  align-items: center;
+  justify-content: center;
+  width: 250px;  
+  height: 250px;
+  border-radius: 50%;
 }
